tests/paczka1/small_fuzzy/63116049.err
Error in line 1: W45tWAY S237 63,4
Error in line 13: sBi090C S237 93,64
Error in line 8: sBi090C S292 11,2
